# clip-search-image-backend

./: .gitignore  pyproject.toml
clip_search_image_backend/: __init__.py
clip_search_image_backend/app/routes/: image_search.py
